# vty-ui-builder-xml

./: LICENSE  README  demo.xml  vty-ui-builder-xml.cabal
src/: Demo.hs
src/Graphics/Vty/Widgets/Builder/Reader/: XML.hs
src/Graphics/Vty/Widgets/Builder/Reader/XML/: Builder.hs  Namespaces.hs  Reader.hs  TH.hs  Types.hs  Validate.hs
tests/: TestDriver.hs  Validation.hs
tests/validation/: box.test  checkbox_label_missing.test  duplicate_ids.test  fill.test  focusGroup_empty.test  ftext.test  ftext_complete.test  ftext_format.test  ftext_invalid_color.test  hbox_single_child.test  hfill_empty_char.test  hfill_invalid_height.test  interface.test  interface_invalid_child.test  interface_missing_focusgroup.test  interface_name_missing.test  interface_name_required.test  interface_parse_failure.test  invalid_arbitrary_children.test  invalid_fText_children.test  invalid_focusgroup_entry_ref.test  invalid_ref.test  invalid_ref_2.test  invalid_ref_3.test  invalid_widget.test  list_invalid_attributes.test  no_namespace.test  pad_invalid_attributes.test  pad_missing_attributes.test  param_refs_work.test  passing.test  ref_valid.test  shared_children.test  sizedBoxes.test  sizedBoxes_invalid_sizes.test  table_invalid.test  table_valid.test  vbox_single_child.test  vfill_empty_char.test
