Name:                vty-ui-builder-xml
Version:             0.1
Synopsis:            XML input document reader for vty-ui-builder
Description:         Provides an XML input document reader for
                     vty-ui-builder, which means it reads XML files
                     and converts them to the AST required by
                     vty-ui-builder's source generation mechanisms.
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8

Data-files:
  README
  tests/validation/*.test

Source-Repository head
  type:     git
  location: https://github.com/jtdaugherty/vty-ui-builder-xml

Library
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Build-Depends:
    vty-ui-builder >= 0.1 && < 0.2,
    HaXml >= 1.22 && < 1.23,
    derive == 2.5.4,
    haskell-src-exts >= 1.11 && < 1.12,
    template-haskell >= 2.5.0.0,
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    haskell98

  Exposed-modules:
    Graphics.Vty.Widgets.Builder.Reader.XML
  Other-modules:
    Graphics.Vty.Widgets.Builder.Reader.XML.Types
    Graphics.Vty.Widgets.Builder.Reader.XML.Validate
    Graphics.Vty.Widgets.Builder.Reader.XML.Builder
    Graphics.Vty.Widgets.Builder.Reader.XML.Namespaces
    Graphics.Vty.Widgets.Builder.Reader.XML.TH
    Graphics.Vty.Widgets.Builder.Reader.XML.Reader

Executable vty-ui-builder-xml-demo
  Hs-Source-Dirs:       src
  Main-is:              Demo.hs
  GHC-Options:          -Wall
  Build-Depends:
    template-haskell >= 2.5.0.0,
    haskell-src-exts >= 1.11 && < 1.12,
    derive == 2.5.4,
    mtl >= 2.0 && < 2.1,
    HaXml >= 1.22 && < 1.23,
    filepath >= 1.1 && < 1.3,
    vty >= 4.7 && < 4.8,
    vty-ui >= 1.3 && < 1.4,
    vty-ui-builder >= 0.1 && < 0.2,
    base >= 4 && < 5,
    haskell98

Executable vty-ui-builder-xml-tests
  Hs-Source-Dirs:       tests
  Main-is:              TestDriver.hs
  Other-modules:
    Validation
  GHC-Options:          -Wall
  Build-Depends:
    template-haskell >= 2.5.0.0,
    haskell-src-exts >= 1.11 && < 1.12,
    derive == 2.5.4,
    mtl >= 2.0 && < 2.1,
    HaXml >= 1.22 && < 1.23,
    filepath >= 1.1 && < 1.3,
    vty >= 4.7 && < 4.8,
    vty-ui >= 1.3 && < 1.4,
    vty-ui-builder >= 0.1 && < 0.2,
    vty-ui-builder-xml >= 0.1 && < 0.2,
    test-framework >= 0.4 && < 0.5,
    test-framework-hunit >= 0.2 && < 0.3,
    directory >= 1.1 && < 1.2,
    HUnit >= 1.2 && < 1.3,
    base >= 4 && < 5,
    haskell98
